# unframe

./: README.md  pyproject.toml  setup.cfg
src/: args.py  logs.py  main.py  tests.py
tests/: mpi-dual-node-gpu-to-gpu-pt2pt-osu_bw.yaml  mpi-single-node-gpu-to-gpu-pt2pt-osu_bw.yaml  osu-inter-node-gcd2gcd-bw.yaml  osu-intra-node-gcd2gcd-bw.yaml
unframe/: unframe  unframe.py
