[metadata]
name = unframe
version = 0.1.0
description = CLI tool to add or change local version tags to Python wheel files
author = Ville Ahlgren
author_email = ville.ahlgren@csc.fi
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.6
install_requires =
    wheel
    PyYAML

[options.packages.find]
include = unframe

[options.entry_points]
console_scripts =
    unframe = unframe.unframe:main

[options.data_files]
share/unframe/examples =
    examples/*
